--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "image_size = 224\n",
-    "batch_size = 64\n",
+    "batch_size = 4\n",
     "workers = 1\n",
     "ngpu = 1\n",
     "validation_split = .2\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
     "    \n",
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
-    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 5)\n",
+    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 20)\n",
     "    torch.save(model.state_dict(), 'Models\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
     "    torch.save(stats, 'Models\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
@@ -258,7 +258,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -311,26 +316,26 @@
    "outputs": [],
    "source": [
     "modelDict = {\n",
-    "#     'resnet18': [models.resnet18(pretrained = True), 512],\n",
+    "    'resnet18': [models.resnet18(pretrained = True), 512],\n",
     "    'resnet34': [models.resnet34(pretrained = True), 512],\n",
-    "#     'resnet50': [models.resnet50(pretrained = True), 2048],\n",
-    "#     'resnet101': [models.resnet101(pretrained = True), 2048],\n",
-    "#     'resnet152': [models.resnet152(pretrained = True), 2048],\n",
-    "#     'densenet121': [models.densenet121(pretrained = True), 1024],\n",
-    "#     'densenet161': [models.densenet161(pretrained = True), 2208],\n",
-    "#     'densenet169': [models.densenet169(pretrained = True), 1664],\n",
-    "#     'densenet201': [models.densenet201(pretrained = True), 1920],\n",
-    "#     'alexnet': [models.alexnet(pretrained = True), 4096],\n",
-    "#     'googlenet': [models.googlenet(pretrained = True), 1024],\n",
-    "#     'vgg11': [models.vgg11(pretrained = True), 4096],\n",
-    "#     'vgg13': [models.vgg13(pretrained = True), 4096],\n",
-    "#     'vgg16': [models.vgg16(pretrained = True), 4096],\n",
-    "#     'vgg19': [models.vgg19(pretrained = True), 4096],\n",
-    "#     'mnasnet0_5': [models.mnasnet0_5(pretrained = True), 1280],\n",
-    "#     'mnasnet1_0': [models.mnasnet1_0(pretrained = True), 1280],\n",
-    "#     'resnext101_32x8d': [models.resnext101_32x8d(pretrained = True), 2048],\n",
-    "#     'resnext50_32x4d': [models.resnext50_32x4d(pretrained = True), 2048],\n",
-    "#     'shufflenet_v2_x0_5': [models.shufflenet_v2_x0_5(pretrained = True), 1024]\n",
+    "    'resnet50': [models.resnet50(pretrained = True), 2048],\n",
+    "    'resnet101': [models.resnet101(pretrained = True), 2048],\n",
+    "    'resnet152': [models.resnet152(pretrained = True), 2048],\n",
+    "    'densenet121': [models.densenet121(pretrained = True), 1024],\n",
+    "    'densenet161': [models.densenet161(pretrained = True), 2208],\n",
+    "    'densenet169': [models.densenet169(pretrained = True), 1664],\n",
+    "    'densenet201': [models.densenet201(pretrained = True), 1920],\n",
+    "    'alexnet': [models.alexnet(pretrained = True), 4096],\n",
+    "    'googlenet': [models.googlenet(pretrained = True), 1024],\n",
+    "    'vgg11': [models.vgg11(pretrained = True), 4096],\n",
+    "    'vgg13': [models.vgg13(pretrained = True), 4096],\n",
+    "    'vgg16': [models.vgg16(pretrained = True), 4096],\n",
+    "    'vgg19': [models.vgg19(pretrained = True), 4096],\n",
+    "    'mnasnet0_5': [models.mnasnet0_5(pretrained = True), 1280],\n",
+    "    'mnasnet1_0': [models.mnasnet1_0(pretrained = True), 1280],\n",
+    "    'resnext101_32x8d': [models.resnext101_32x8d(pretrained = True), 2048],\n",
+    "    'resnext50_32x4d': [models.resnext50_32x4d(pretrained = True), 2048],\n",
+    "    'shufflenet_v2_x0_5': [models.shufflenet_v2_x0_5(pretrained = True), 1024]\n",
     "}\n",
     "\n",
     "def lastLayer(modelType, model):\n",
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -371,48 +376,48 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/4\n",
+      "Epoch 0/19\n",
       "----------\n",
-      "train Loss: 1.4870 Acc: 0.3640\n",
-      "val Loss: 1.3648 Acc: 0.4634\n",
+      "train Loss: 1.8830 Acc: 0.2019\n",
+      "val Loss: 1.6940 Acc: 0.2216\n",
       "\n",
-      "Epoch 1/4\n",
+      "Epoch 1/19\n",
       "----------\n",
-      "train Loss: 0.8241 Acc: 0.7289\n",
-      "val Loss: 1.0437 Acc: 0.6355\n",
+      "train Loss: 1.7139 Acc: 0.2179\n",
+      "val Loss: 1.6293 Acc: 0.2143\n",
       "\n",
-      "Epoch 2/4\n",
+      "Epoch 2/19\n",
       "----------\n",
-      "train Loss: 0.3434 Acc: 0.9396\n",
-      "val Loss: 0.7623 Acc: 0.7619\n",
+      "train Loss: 1.6764 Acc: 0.2157\n",
+      "val Loss: 1.6735 Acc: 0.2289\n",
       "\n",
-      "Epoch 3/4\n",
+      "Epoch 3/19\n",
       "----------\n",
-      "train Loss: 0.1476 Acc: 0.9886\n",
-      "val Loss: 0.7300 Acc: 0.7491\n",
+      "train Loss: 1.6628 Acc: 0.2326\n",
+      "val Loss: 1.6228 Acc: 0.2491\n",
       "\n",
-      "Epoch 4/4\n",
+      "Epoch 4/19\n",
       "----------\n",
-      "train Loss: 0.0743 Acc: 0.9986\n",
-      "val Loss: 0.7189 Acc: 0.7509\n",
+      "train Loss: 1.6580 Acc: 0.2303\n",
+      "val Loss: 1.6216 Acc: 0.2289\n",
       "\n",
-      "Training complete in 17m 51s\n",
-      "Best val Acc: 0.761905\n"
+      "Epoch 5/19\n",
+      "----------\n"
      ]
     }
    ],
    "source": [
-    "modelType = 'resnet'\n",
-    "modelSize = '34'\n",
+    "modelType = 'vgg'\n",
+    "modelSize = '16'\n",
     "dataType = '512'\n",
-    "figSize = '_final'\n",
+    "figSize = '128'\n",
     "\n",
     "autoTraining(modelType, modelSize, dataType, figSize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
