--- a/Codigos/Análise de BCI/Gramian Angular Field.ipynb
+++ b/Codigos/Análise de BCI/Gramian Angular Field.ipynb
@@ -55,9 +55,11 @@
     "    'Processed': ['ProcessedSignals', 'GAF_ProcessedSignals', 'Processed_']\n",
     "}\n",
     "dataPath = path('C:\\\\Users\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+methodDict[method][0]+'\\\\'+dataType)\n",
-    "figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+methodDict[method][1]+\"\\\\\"+dataType)\n",
+    "# figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+methodDict[method][1]+\"\\\\\"+dataType)\n",
+    "figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\0179520170504\\\\'+dataType)\n",
     "\n",
     "data = pd.read_csv('SSVEPDataset'+methodDict[method][2]+dataType+\".csv\")\n",
+    "data = data.where(data['subject'] == 179520170504).dropna().reset_index()\n",
     "\n",
     "gasf = GramianAngularField(image_size = 256, method = 'summation')\n",
     "files = list(range(len(data)))\n",
@@ -89,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(2500, 2730):\n",
+    "for i in range(0, 525):\n",
     "    sample = np.loadtxt(data.loc[i]['path']).reshape(1, -1)\n",
     "    if sample[0][1] != 0:\n",
     "        X = gasf.fit_transform(sample)\n",
@@ -101,7 +103,7 @@
     "        plt.axis('off')\n",
     "        im = ax.imshow(X[0], cmap = 'rainbow', origin = 'lower')\n",
     "\n",
-    "        state = str(data.loc[i]['state'])\n",
+    "        state = str(int(data.loc[i]['state']))\n",
     "#         subject = str(data.loc[i]['subject'])\n",
     "        subject = '0_'\n",
     "        if data.loc[i]['path'][-6] == '\\\\':\n",
@@ -124,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "2730"
+       "525"
       ]
      },
      "execution_count": 3,
