--- a/Codigos/Pytorch/Autoencoders.ipynb
+++ b/Codigos/Pytorch/Autoencoders.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +30,7 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from torchvision import datasets, transforms\n",
     "from classes import *\n",
     "\n",
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +64,8 @@
     "        super(Autoencoder, self).__init__()\n",
     "        self.encoder = nn.Sequential(\n",
     "            ConvBlock(1, 16, kernel_size = 3, stride = 2, padding = 1),\n",
-    "            nn.Max\n",
     "            ConvBlock(16, 32, kernel_size = 3, stride = 2, padding = 1),\n",
-    "            ConvBlock(32, 64, kernel_size = 7, activFunc = 'identity')\n",
+    "            ConvBlock(32, 64, kernel_size = 7, activFunc = 'none')\n",
     "        )\n",
     "        self.decoder = nn.Sequential(\n",
     "            DeconvBlock(64, 32, kernel_size = 7),\n",
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
