--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "#     folder = 'GAF_Combinados'\n",
-    "    folder = '0179520170504'\n",
+    "    folder = 'GAF_Combinados'\n",
+    "#     folder = '0179520170504'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
     "    dataset = datasets.ImageFolder(root = figPath(),\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
     "dataType = '512'\n",
     "figSize = '128'\n",
     "\n",
-    "# model = autoTraining(modelType, modelSize, dataType, figSize)"
+    "model = autoTraining(modelType, modelSize, dataType, figSize)"
    ]
   },
   {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,34 +402,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloaders, dataset_sizes, dataloader, _ = getData(dataType)"
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = dataloader.dataset"
+    "# folder = 'GAF_Combinados'\n",
+    "dataType = '512'\n",
+    "figsize = '128'\n",
+    "folder = '0179520170504'\n",
+    "figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
+    "\n",
+    "dataset = datasets.ImageFolder(root = figPath(),\n",
+    "                              transform = transforms.Compose([\n",
+    "                              transforms.Resize(image_size),\n",
+    "                              transforms.ToTensor(),\n",
+    "                              transforms.Normalize((0.5, 0.5, 0.5),\n",
+    "                                                   (0.5, 0.5, 0.5))\n",
+    "                            ]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, figPath):\n",
+    "        self.transform = transforms.Compose([transforms.Resize(image_size),\n",
+    "                                             transforms.ToTensor(),\n",
+    "                                             transforms.Normalize((0.5, 0.5, 0.5),\n",
+    "                                                                  (0.5, 0.5, 0.5))])\n",
+    "        \n",
+    "        X, y = self.dataLoading(figPath)\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        \n",
+    "        assert len(X) == len(y)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.X)\n",
+    "    \n",
+    "    def __getitem__(self, i):\n",
+    "        return self.load_image(self.X[i][0]), self.y[i]\n",
+    "    \n",
+    "    def load_image(self, filename):\n",
+    "        image = self.transform(Image.open(filename).convert('RGB'))\n",
+    "#         return Image.open(filename).convert('RGB')\n",
+    "        return image\n",
+    "    \n",
+    "    def dataLoading(self, figPath):\n",
+    "        X = []\n",
+    "        y = []\n",
+    "        for i in range(1, 6):\n",
+    "            path = figPath+'\\\\'+str(i)\n",
+    "            files = os.listdir(path)\n",
+    "            for picture in files:\n",
+    "                filePath = path + '\\\\' + picture\n",
+    "                X.append((filePath, i - 1))\n",
+    "                y.append(i - 1)\n",
+    "                \n",
+    "        return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CustomDataset(figPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PretrainedModel(nn.Module):\n",
-    "    def __init__(self, output_features):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
     "        model = models.resnet18(pretrained = True)\n",
     "        num_ftrs = model.fc.in_features\n",
-    "        model.fc = nn.Linear(num_ftrs, output_features)\n",
+    "        model.fc = nn.Linear(num_ftrs, 5)\n",
     "        self.model = model\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -438,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,37 +515,58 @@
     "#     lr = 0.001,\n",
     "#     batch_size = 4,\n",
     "#     max_epochs = 5,\n",
-    "#     module__output_features = 5,\n",
     "#     optimizer = optim.SGD,\n",
     "#     optimizer__momentum = 0.9,\n",
-    "#     train_split = None,\n",
+    "#     train_split = CVSplit(3),\n",
     "#     device = 'cuda'\n",
     "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NeuralNetClassifier(\n",
+    "# CALLBACKS\n",
+    "from skorch.callbacks import LRScheduler\n",
+    "from skorch.callbacks import Checkpoint\n",
+    "from skorch.callbacks import Freezer\n",
+    "\n",
+    "lrscheduler = LRScheduler(policy = 'StepLR', step_size = 7, gamma = 0.1)\n",
+    "checkpoint = Checkpoint(f_params = 'best_mode.pt', monitor = 'valid_acc_best')\n",
+    "freezer = Freezer(lambda x: not x.startswith('model.fc'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = NeuralNetClassifier(\n",
     "    PretrainedModel,\n",
     "    criterion = nn.CrossEntropyLoss,\n",
     "    lr = 0.001,\n",
     "    batch_size = 4,\n",
-    "    max_epochs = 5,\n",
-    "    module__output_features = 5,\n",
+    "    max_epochs = 25,\n",
+    "    module__output_features = 2,\n",
     "    optimizer = optim.SGD,\n",
     "    optimizer__momentum = 0.9,\n",
-    "    train_split = CVSplit(3),\n",
+    "    iterator_train__shuffle = True,\n",
+    "    iterator_train__num_workers = 4,\n",
+    "    iterator_valid__num_workers = 4,\n",
+    "    iterator_valid__shuffle = True,\n",
+    "#     train_split = predefined_split(val_ds),\n",
+    "    train_split = CVSplit(5),\n",
+    "    callbacks = [lrscheduler, checkpoint, freezer],\n",
     "    device = 'cuda'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 217,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -490,13 +578,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  epoch    train_loss    valid_acc    valid_loss      dur\n",
-      "-------  ------------  -----------  ------------  -------\n",
-      "      1        \u001b[36m3.7746\u001b[0m       \u001b[32m0.0000\u001b[0m       \u001b[35m41.0468\u001b[0m  40.8753\n",
-      "      2        9.7999       0.0000       \u001b[35m10.5419\u001b[0m  42.3698\n",
-      "      3        4.3870       0.0000       15.1508  39.3668\n",
-      "      4        \u001b[36m3.5514\u001b[0m       0.0000        \u001b[35m6.8342\u001b[0m  39.3618\n",
-      "      5        \u001b[36m2.8827\u001b[0m       0.0000        \u001b[35m5.7469\u001b[0m  38.9240\n"
+      "Re-initializing module.\n",
+      "Re-initializing optimizer.\n",
+      "  epoch    train_loss      dur\n",
+      "-------  ------------  -------\n",
+      "      1           nan  47.1568\n"
      ]
     },
     {
@@ -592,13 +678,42 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(dataset, y = dataset.targets)"
+    "model.fit(dataset, y = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Patrick\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "IndexError: invalid index to scalar variable.\n",
+      "\n",
+      "  FitFailedWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_results = cross_validate(model, dataset, dataset.y, cv = 3)"
    ]
   },
   {
