--- a/Codigos/Pytorch/Autoencoders.ipynb
+++ b/Codigos/Pytorch/Autoencoders.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,6 +474,99 @@
     "        \n",
     "    train_loss = train_loss / len(trainLoader)\n",
     "    print('Epoch: {} \\tTraining Loss: {:.6f}'.format(epoch, train_loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "Genetic Algorithm Autoencoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Autoencoder(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Autoencoder, self).__init__()\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            ConvBlock(1, 16, kernel_size = 3, stride = 2, padding = 1),\n",
+    "            ConvBlock(16, 32, kernel_size = 7, activFunc = 'none')\n",
+    "        )\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            DeconvBlock(32, 16, kernel_size = 7),\n",
+    "            DeconvBlock(16, 1,  kernel_size = 3, stride = 2, padding = 1, output_padding = 1, activFunc = 'sigmoid')\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        X = self.encoder(X)\n",
+    "        X = self.decoder(X)\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoderWeights1 = model.encoder.state_dict()['0.0.weight']\n",
+    "encoderBias1    = model.encoder.state_dict()['0.0.bias']\n",
+    "encoderWeights2 = model.encoder.state_dict()['1.0.weight']\n",
+    "encoderBias2    = model.encoder.state_dict()['1.0.bias']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Individual Creator\n",
+    "def individualWeightsCreator():\n",
+    "    model = Autoencoder()\n",
+    "    encoderWeights = {\n",
+    "        'weights1': model.encoder.state_dict()['0.0.weight'],\n",
+    "        'weights2': model.encoder.state_dict()['1.0.weight'],\n",
+    "        'bias1': model.encoder.state_dict()['0.0.bias'],\n",
+    "        'bias2': model.encoder.state_dict()['1.0.bias'],\n",
+    "    }\n",
+    "    decoderWeights = {\n",
+    "        'weights1': model.encoder.state_dict()['0.0.weight'],\n",
+    "        'weights2': model.encoder.state_dict()['1.0.weight'],\n",
+    "        'bias1': model.encoder.state_dict()['0.0.bias'],\n",
+    "        'bias2': model.encoder.state_dict()['1.0.bias'],\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deap import base\n",
+    "from deap import creator\n",
+    "from deap import tools\n",
+    "import random\n",
+    "\n",
+    "# CONSTANTS\n",
+    "\n",
+    "# GENETIC ALGORITHM CONSTANTS:\n",
+    "POPULATION_SIZE = \n",
+    "P_CROSSOVER = \n",
+    "P_MUTATION = \n",
+    "MAX_GENERATIONS = \n",
+    "RANDOM_SEED = 42; random.seed(RANDOM_SEED)\n",
+    "\n",
+    "# DEFINING THE PROBLEM\n",
+    "toolbox = base.Toolbox()\n",
+    "toolbox.register()"
    ]
   },
   {
