--- a/Codigos/Pytorch/Autoencoders.ipynb
+++ b/Codigos/Pytorch/Autoencoders.ipynb
@@ -566,7 +566,23 @@
     "\n",
     "# DEFINING THE PROBLEM\n",
     "toolbox = base.Toolbox()\n",
-    "toolbox.register()"
+    "creator.create(\"FitnessMin\", Base.Fitness, weights = (-1.0,))\n",
+    "creator.create(\"Individual\", Autoencoder, fitness = creator.FitnessMin)\n",
+    "toolbox.register(\"IndividualCreator\", tools.initIterate, creator.Individual)\n",
+    "toolbox.register(\"populationCreator\", tools.initRepeat, list, toolbox.individualCreator)\n",
+    "\n",
+    "def getLoss(network, dataset):\n",
+    "    '''\n",
+    "        network:\n",
+    "        dataset: test dataset\n",
+    "        \n",
+    "        Network will be applied to a test dataset, returning the resultant loss.\n",
+    "    '''\n",
+    "\n",
+    "def mate(pNetwork1, pNetwork2):\n",
+    "    '''\n",
+    "        Crossover operator\n",
+    "    '''\n"
    ]
   },
   {
@@ -574,7 +590,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "creator."
+   ]
   }
  ],
  "metadata": {
