--- a/Codigos/Pytorch/Genetic Algorithms.ipynb
+++ b/Codigos/Pytorch/Genetic Algorithms.ipynb
@@ -503,6 +503,264 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Other Evolutionary Algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import elitism\n",
+    "import operator\n",
+    "from deap import gp\n",
+    "from deap import base\n",
+    "from deap import creator\n",
+    "from deap import tools\n",
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Genetic Programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONSTANTS\n",
+    "NUM_INPUTS = 3\n",
+    "NUM_COMBINATIONS = 2 ** NUM_INPUTS\n",
+    "\n",
+    "POPULATION_SIZE = 60\n",
+    "P_CROSSOVER = 0.9\n",
+    "P_MUTATION = 0.5\n",
+    "MAX_GENERATIONS = 20\n",
+    "HALL_OF_FAME_SIZE = 10\n",
+    "\n",
+    "MIN_TREE_HEIGHT = 3\n",
+    "MAX_TREE_HEIGHT = 5\n",
+    "MUT_MIN_TREE_HEIGHT = 0\n",
+    "MUT_MAX_TREE_HEIGHT = 2\n",
+    "LIMIT_TREE_HEIGHT = 17\n",
+    "\n",
+    "parityIn = list(itertools.product([0, 1], repeat = NUM_INPUTS)) # input column\n",
+    "parityOut = []                                                  # output column\n",
+    "for row in parityIn:\n",
+    "    parityOut.append(sum(row)%2)\n",
+    "    \n",
+    "toolbox = base.Toolbox()\n",
+    "# PRIMITIVES (building blocks for the operations)\n",
+    "primitiveSet = gp.PrimitiveSet(\"main\", NUM_INPUTS, \"in_\")\n",
+    "primitiveSet.addPrimitive(operator.and_, 2)\n",
+    "primitiveSet.addPrimitive(operator.or_, 2)\n",
+    "primitiveSet.addPrimitive(operator.xor, 2)\n",
+    "primitiveSet.addPrimitive(operator.not_, 1)\n",
+    "\n",
+    "primitiveSet.addTerminal(1)\n",
+    "primitiveSet.addTerminal(0)\n",
+    "\n",
+    "# OPERATIONS\n",
+    "creator.create(\"FitnessMin\", base.Fitness, weights = (-1.0,))\n",
+    "creator.create(\"Individual\", gp.PrimitiveTree, fitness = creator.FitnessMin)\n",
+    "# helper function\n",
+    "toolbox.register(\"expr\", gp.genFull, pset = primitiveSet, min_ = MIN_TREE_HEIGHT, max_ = MAX_TREE_HEIGHT)\n",
+    "toolbox.register(\"individualCreator\", tools.initIterate, creator.Individual, toolbox.expr)\n",
+    "toolbox.register(\"populationCreator\", tools.initRepeat, list, toolbox.individualCreator)\n",
+    "toolbox.register(\"compile\", gp.compile, pset = primitiveSet)\n",
+    "\n",
+    "def parityError(individual):\n",
+    "    func = toolbox.compile(expr = individual)\n",
+    "    return sum(func(*pIn) != pOut for pIn, pOut in zip(parityIn, parityOut))\n",
+    "def getCost(individual):\n",
+    "    return parityError(individual)\n",
+    "\n",
+    "toolbox.register(\"evaluate\", getCost)\n",
+    "toolbox.register(\"select\", tools.selTournament, tournsize = 2)\n",
+    "toolbox.register(\"mate\", gp.cxOnePoint)\n",
+    "\n",
+    "toolbox.register(\"expr_mut\", gp.genGrow, min_ = MUT_MIN_TREE_HEIGHT, MAX_ = MUT_MAX_TREE_HEIGHT)\n",
+    "\n",
+    "toolbox.register(\"mutate\", gp.mutUniform, expr = toolbox.expr_mut, pset = primitiveSet)\n",
+    "\n",
+    "toolbox.decorate(\"mate\", gp.staticLimit(key = operator.attrgetter(\"height\"), max_value = LIMIT_TREE_HEIGHT))\n",
+    "toolbox.decorate(\"mutate\", gp.staticLimit(key = operator.attrgetter(\"height\"), max_value = LIMIT_TREE_HEIGHT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create initial population (generation 0):\n",
+    "population = toolbox.populationCreator(n=POPULATION_SIZE)\n",
+    "\n",
+    "# prepare the statistics object:\n",
+    "stats = tools.Statistics(lambda ind: ind.fitness.values)\n",
+    "stats.register(\"min\", np.min)\n",
+    "stats.register(\"avg\", np.mean)\n",
+    "\n",
+    "# define the hall-of-fame object:\n",
+    "hof = tools.HallOfFame(HALL_OF_FAME_SIZE)\n",
+    "\n",
+    "# perform the Genetic Algorithm flow with elitism:\n",
+    "population, logbook = elitism.eaSimpleWithElitism(population,\n",
+    "                                                  toolbox,\n",
+    "                                                  cxpb=P_CROSSOVER,\n",
+    "                                                  mutpb=P_MUTATION,\n",
+    "                                                  ngen=MAX_GENERATIONS,\n",
+    "                                                  stats=stats,\n",
+    "                                                  halloffame=hof,\n",
+    "                                                  verbose=True)\n",
+    "\n",
+    "# print info for best solution found:\n",
+    "best = hof.items[0]\n",
+    "print(\"-- Best Individual = \", best)\n",
+    "print(\"-- length={}, height={}\".format(len(best), best.height))\n",
+    "print(\"-- Best Fitness = \", best.fitness.values[0])\n",
+    "\n",
+    "\n",
+    "# plot best tree:\n",
+    "nodes, edges, labels = gp.graph(best)\n",
+    "g = nx.Graph()\n",
+    "g.add_nodes_from(nodes)\n",
+    "g.add_edges_from(edges)\n",
+    "pos = nx.spring_layout(g)\n",
+    "\n",
+    "nx.draw_networkx_nodes(g, pos, node_color='cyan')\n",
+    "nx.draw_networkx_nodes(g, pos, nodelist=[0], node_color='red', node_size=400)\n",
+    "\n",
+    "nx.draw_networkx_edges(g, pos)\n",
+    "nx.draw_networkx_labels(g, pos, **{\"labels\": labels, \"font_size\": 8})\n",
+    "\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Particle Swarm Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIMENSIONS = 2\n",
+    "POPULATION_SIZE = 20\n",
+    "MAX_GENERATIONS = 500\n",
+    "\n",
+    "MIN_START_POSITION, MAX_START_POSITION = -5, 5\n",
+    "MIN_SPEED, MAX_SPEED = -3, 3\n",
+    "MAX_LOCAL_UPDATE_FACTOR = MAX_GLOBAL_UPDATE_FACTOR = 2.0\n",
+    "\n",
+    "creator.create(\"FitnessMin\", base.Fitness, weights = (-1.0,))\n",
+    "creator.create(\"Particle\", np.ndarray, fitness = creator.FitnessMin, speed = None, best = None)\n",
+    "\n",
+    "def createParticle():\n",
+    "    particle = creator.Particle(np.random.uniform(MIN_START_POSITION, MAX_START_POSITION, DIMENSIONS))\n",
+    "    particle.speed = np.random.uniform(MIN_SPEED, MAX_SPEED, DIMENSIONS)\n",
+    "    \n",
+    "    return particle\n",
+    "toolbox.register(\"particleCreator\", createParticle)\n",
+    "toolbox.register(\"populationCreator\", tools.initRepeat, list, toolbox.particleCreator)\n",
+    "\n",
+    "def updateParticle(particle, best):\n",
+    "    localUpdateFactor = np.random.uniform(0,\n",
+    "                                         MAX_LOCAL_UPDATE_FACTOR,\n",
+    "                                         particle.size)\n",
+    "    globalUpdateFactor = np.random.uniform(0,\n",
+    "                                          MAX_GLOBAL_UPDATE_FACTOR,\n",
+    "                                          particle.size)\n",
+    "    localSpeedUpdate = localUpdateFactor * (particle.best - particle)\n",
+    "    globalSpeedUpdate = globalUpdateFactor * (best - particle)\n",
+    "    \n",
+    "    particle.speed = particle.speed + (localSpeedUpdate + globalSpeedUpdate)\n",
+    "    \n",
+    "    \n",
+    "particle.speed = np.clip(particle.speed, MIN_SPEED, MAX_SPEED)\n",
+    "particle[:] = particle + particle.speed\n",
+    "\n",
+    "toolbox.register(\"update\", updateParticle)\n",
+    "\n",
+    "def himmelblau(particle):\n",
+    "    x = particle[0]\n",
+    "    y = particle[1]\n",
+    "    f = (x ** 2 + y - 11) ** 2 + (x + y ** 2 - 7) ** 2\n",
+    "    return f, # return a tuple\n",
+    "\n",
+    "toolbox.register(\"evaluate\", himmelblau)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the population of particle population:\n",
+    "population = toolbox.populationCreator(n=POPULATION_SIZE)\n",
+    "\n",
+    "# prepare the statistics object:\n",
+    "stats = tools.Statistics(lambda ind: ind.fitness.values)\n",
+    "stats.register(\"min\", np.min)\n",
+    "stats.register(\"avg\", np.mean)\n",
+    "\n",
+    "logbook = tools.Logbook()\n",
+    "logbook.header = [\"gen\", \"evals\"] + stats.fields\n",
+    "\n",
+    "best = None\n",
+    "\n",
+    "for generation in range(MAX_GENERATIONS):\n",
+    "\n",
+    "    # evaluate all particles in polulation:\n",
+    "    for particle in population:\n",
+    "\n",
+    "        # find the fitness of the particle:\n",
+    "        particle.fitness.values = toolbox.evaluate(particle)\n",
+    "\n",
+    "        # particle best needs to be updated:\n",
+    "        if particle.best is None or particle.best.size == 0 or particle.best.fitness < particle.fitness:\n",
+    "            particle.best = creator.Particle(particle)\n",
+    "            particle.best.fitness.values = particle.fitness.values\n",
+    "\n",
+    "        # global best needs to be updated:\n",
+    "        if best is None or best.size == 0 or best.fitness < particle.fitness:\n",
+    "            best = creator.Particle(particle)\n",
+    "            best.fitness.values = particle.fitness.values\n",
+    "\n",
+    "    # update each particle's speed and position:\n",
+    "    for particle in population:\n",
+    "        toolbox.update(particle, best)\n",
+    "\n",
+    "    # record the statistics for the current generation and print it:\n",
+    "    logbook.record(gen=generation, evals=len(population), **stats.compile(population))\n",
+    "    print(logbook.stream)\n",
+    "\n",
+    "# print info for best solution found:\n",
+    "print(\"-- Best Particle = \", best)\n",
+    "print(\"-- Best Fitness = \", best.fitness.values[0])"
+   ]
   }
  ],
  "metadata": {
